Update to JDK 22 started